RESULTS/AutoSpec/sygus_mask/out/61_0001/61_merged.txt
/home/dimpling/AutoSpec/out/61_0001/61_merged.c:8:74: error: unterminated comment
    8 |   loop invariant c == n ==> \exists integer k; k == 1; /* condition indicating when c resets */;
      |                                                                          ^
cc1: note: unrecognized command-line option ‘-Wno-unknown-warning-option’ may have been intended to silence earlier diagnostics
